WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171942
Unicode characters which can't be rendered in any font are invisible
https://bugs.webkit.org/show_bug.cgi?id=171942
Summary
Unicode characters which can't be rendered in any font are invisible
Myles C. Maxfield
Reported
2017-05-10 13:24:25 PDT
Unicode characters which can't be rendered in any font are invisible
Attachments
Patch
(5.15 KB, patch)
2017-05-10 13:29 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-elcapitan
(967.71 KB, application/zip)
2017-05-10 14:14 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews107 for mac-elcapitan-wk2
(946.83 KB, application/zip)
2017-05-10 14:39 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews115 for mac-elcapitan
(1.78 MB, application/zip)
2017-05-10 14:45 PDT
,
Build Bot
no flags
Details
Patch
(6.21 KB, patch)
2017-05-11 11:54 PDT
,
Myles C. Maxfield
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2017-05-10 13:29:15 PDT
Created
attachment 309627
[details]
Patch
Myles C. Maxfield
Comment 2
2017-05-10 13:29:40 PDT
<
rdar://problem/32054234
>
Build Bot
Comment 3
2017-05-10 14:14:00 PDT
Comment on
attachment 309627
[details]
Patch
Attachment 309627
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/3713641
New failing tests: fast/text/softbank-emoji.html
Build Bot
Comment 4
2017-05-10 14:14:01 PDT
Created
attachment 309632
[details]
Archive of layout-test-results from ews100 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 5
2017-05-10 14:39:12 PDT
Comment on
attachment 309627
[details]
Patch
Attachment 309627
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/3713732
New failing tests: fast/text/softbank-emoji.html
Build Bot
Comment 6
2017-05-10 14:39:13 PDT
Created
attachment 309638
[details]
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 7
2017-05-10 14:45:26 PDT
Comment on
attachment 309627
[details]
Patch
Attachment 309627
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3713693
New failing tests: fast/text/softbank-emoji.html
Build Bot
Comment 8
2017-05-10 14:45:27 PDT
Created
attachment 309639
[details]
Archive of layout-test-results from ews115 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Myles C. Maxfield
Comment 9
2017-05-11 11:54:04 PDT
Created
attachment 309739
[details]
Patch
Myles C. Maxfield
Comment 10
2017-05-15 13:10:47 PDT
Comment on
attachment 309739
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=309739&action=review
> Source/WebCore/ChangeLog:12 > + Default_Ignorable_Code_Point property, because this is what CoreText does.
Mention: 1. In UTR #36 Unicode Security Considerations:
http://www.unicode.org/reports/tr36/#Recommendations_General
"If there is no available glyph for a character, never show a simple "?" or omit the character." 2. Unicode Standard section 5.3 Unknown and MIssing Characters, starting at page marked 203 in the following:
http://www.unicode.org/versions/Unicode9.0.0/ch05.pdf
Tim Horton
Comment 11
2017-05-15 13:11:35 PDT
Comment on
attachment 309739
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=309739&action=review
> LayoutTests/fast/text/default-ignorable-expected.html:6 > +This test makes sure that code point which have the Default_Ignorable_Code_Point property are not rendered. The test passes if you don't see anything below.
code point*s*?
Myles C. Maxfield
Comment 12
2017-05-15 13:16:56 PDT
Committed
r216874
: <
http://trac.webkit.org/changeset/216874
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug