Unicode characters which can't be rendered in any font are invisible https://bugs.webkit.org/show_bug.cgi?id=171942 <rdar://problem/32054234>

Reviewed by Tim Horton.

Source/WebCore:

There are some Unicode characters which don't have any font on the system which can render them.
These characters should be drawn as the .notdef "tofu." This is for security and usability, as
well as what Firefox and Chrome do. However, we still shouldn't draw characters with the
Default_Ignorable_Code_Point property, because this is what CoreText does.

This behavior is also what the Unicode spec recommends: In UTR #36 Unicode Security Considerations:
http://www.unicode.org/reports/tr36/#Recommendations_General
"If there is no available glyph for a character, never show a simple "?" or omit the character."

Also relevant is the Unicode Standard section 5.3 Unknown and MIssing Characters, starting at page
marked 203 in the following: http://www.unicode.org/versions/Unicode9.0.0/ch05.pdf

Tests: fast/text/default-ignorable.html
       fast/text/unknown-char-notdef.html

* platform/graphics/WidthIterator.cpp:
(WebCore::characterMustDrawSomething):

LayoutTests:

* fast/text/default-ignorable-expected.html: Added.
* fast/text/default-ignorable.html: Added.
* fast/text/unknown-char-notdef-expected-mismatch.html: Added.
* fast/text/unknown-char-notdef.html: Added.

Canonical link: https://commits.webkit.org/189051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216874 268f45cc-cd09-0410-ab3c-d52691b4dbfc